apps/staging/whoami/whoami.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: default
spec:
  template:
    spec:
      containers:
        - name: whoami
          args:
            - -name=staging
