apps/staging/whoami/whoami.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - host: whoami.${SECRET_DOMAIN}
            path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web
